Basic OTA implementation

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-[env:esp32dev]
+[env:kc868a2]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -19,3 +19,9 @@ build_flags=
     -Wshadow
     -DCORE_DEBUG_LEVEL=5
     -DCONFIG_LOG_COLORS=1
+
+[env:kc868a2_ota]
+extends = env:kc868a2
+upload_protocol = espota
+upload_port = 192.168.1.35
+upload_flags = --auth=somestrongpassword 
