--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_deps =
     https://github.com/lan143/ed-config
     https://github.com/lan143/ed-utils
     https://github.com/lan143/ed-ha
+    FastLED
 build_flags=
     -Wshadow
     -DCORE_DEBUG_LEVEL=5
