--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,14 @@ monitor_filters =
     colorize
 board_build.filesystem = spiffs
 lib_deps =
-    ESP Async WebServer
+    ESP32Async/ESPAsyncWebServer
     ArduinoJSON
     FS
-    https://github.com/marvinroger/async-mqtt-client@^0.9.0
+    https://github.com/lan143/ed-mqtt
     https://github.com/lan143/ed-config
     https://github.com/lan143/ed-utils
     https://github.com/lan143/ed-ha
+    https://github.com/lan143/ed-healthcheck
     FastLED
 build_flags=
     -Wshadow
@@ -24,5 +25,5 @@ build_flags=
 [env:kc868a2_ota]
 extends = env:kc868a2
 upload_protocol = espota
-upload_port = 192.168.1.35
+upload_port = 192.168.1.34
 upload_flags = --auth=somestrongpassword 
