--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@ monitor_speed = 115200
 monitor_filters =
     direct
     colorize
+    esp32_exception_decoder
 board_build.filesystem = spiffs
 lib_deps =
     ESP32Async/ESPAsyncWebServer
@@ -16,11 +17,20 @@ lib_deps =
     https://github.com/lan143/ed-utils
     https://github.com/lan143/ed-ha
     https://github.com/lan143/ed-healthcheck
+    https://github.com/lan143/ed-wb
     FastLED
 build_flags=
     -Wshadow
     -DCORE_DEBUG_LEVEL=5
     -DCONFIG_LOG_COLORS=1
+
+[env:kc868a2_dev]
+extends = env:kc868a2
+build_flags=
+    -Wshadow
+    -DCORE_DEBUG_LEVEL=5
+    -DCONFIG_LOG_COLORS=1
+    '-DCONTROLLER_NAME="Navier dev"'
 
 [env:kc868a2_ota]
 extends = env:kc868a2
